syntax = "proto3";
option java_package = "com.ubtrobot.gold";
option java_outer_classname="UserContacts";
message UserContact{
    repeated User user = 1;
}

message User{
    string number = 1;
    string name = 2;
    int64 id = 3;
}
